--- a/packaged.yaml
+++ b/packaged.yaml
@@ -18,7 +18,7 @@ Metadata:
     LicenseUrl: s3://appdevstore/5122657d5b9a0d3713e24d3a33eae431
     Name: sumologic-slack
     ReadmeUrl: s3://appdevstore/a4f6f2ba5f0edde2440caf90e81ea530
-    SemanticVersion: 1.0.4
+    SemanticVersion: 1.0.0
     SourceCodeUrl: https://github.com/SumoLogic/sumologic-slack
     SpdxLicenseId: Apache-2.0
 Outputs:
@@ -36,7 +36,7 @@ Parameters:
 Resources:
   SlackFunction:
     Properties:
-      CodeUri: s3://appdevstore/68ae763c60b9bb3c9525ffdc56539e26
+      CodeUri: s3://appdevstore/1c8b9b640fe2eb618005db86c047ec35
       Environment:
         Variables:
           ENVIRONMENT: aws
@@ -53,7 +53,7 @@ Resources:
       MemorySize: 256
       Policies:
       - AmazonDynamoDBFullAccess
-      Runtime: python3.7e
+      Runtime: python3.7
       Timeout: 900
     Type: AWS::Serverless::Function
 Transform: AWS::Serverless-2016-10-31
