--- a/template.yaml
+++ b/template.yaml
@@ -12,12 +12,13 @@ Metadata:
     Labels:
     - lambda
     - sumologic
+    - atlas
     - serverless
     - Slack
     LicenseUrl: ./LICENSE
     Name: sumologic-slack
     ReadmeUrl: ./README.md
-    SemanticVersion: 1.0.1
+    SemanticVersion: 1.0.0
     SourceCodeUrl: https://github.com/SumoLogic/sumologic-slack
     SpdxLicenseId: Apache-2.0
 Outputs:
@@ -28,6 +29,8 @@ Outputs:
       - SlackFunction
       - Arn
 Parameters:
+  BackfillDays:
+    Type: String
   HttpLogsEndpoint:
     Type: String
   Token:
@@ -36,8 +39,13 @@ Resources:
   SlackFunction:
     Properties:
       CodeUri: ./target/aws/build/
+      Description: This function gets triggered perodically via CloudWatchEvents and
+        fetches logs from Slack and ingest to SumoLogic
       Environment:
         Variables:
+          BACKFILL_DAYS:
+            Ref: BackfillDays
+          ENABLE_CONSOLE_LOG: 'false'
           ENVIRONMENT: aws
           HTTP_LOGS_ENDPOINT:
             Ref: HttpLogsEndpoint
@@ -46,15 +54,13 @@ Resources:
       Events:
         ScheduleRule:
           Properties:
-            Schedule: rate(10 minutes)
+            Schedule: rate(5 minutes)
           Type: Schedule
       Handler: main.main
-      Layers:
-      - Fn::Sub: arn:aws:lambda:${AWS::Region}:956882708938:layer:Slack-deps:5
       MemorySize: 256
       Policies:
       - AmazonDynamoDBFullAccess
       Runtime: python3.7
-      Timeout: 900
+      Timeout: 300
     Type: AWS::Serverless::Function
 Transform: AWS::Serverless-2016-10-31
