initial changes for infrequent and frequent channels segregation.

--- a/sumoslack/slackcollector.yaml
+++ b/sumoslack/slackcollector.yaml
@@ -1,6 +1,10 @@
 Slack:
  TOKEN: null
  AUDIT_LOG_URL: https://api.slack.com/audit/v1/
+ ACCESS_LOGS_REFRESH_TIME_IN_HOURS: 24
+ USER_LOGS_REFRESH_TIME_IN_HOURS: 24
+ INFREQUENT_CHANNELS_THRESHOLD_IN_HOURS: 1
+ INFREQUENT_CHANNELS_MESSAGES_FETCH_TIME_IN_HOURS: 24
  LOG_TYPES:
   - USER_LOGS
   - ACCESS_LOGS
