--- a/template.yaml
+++ b/template.yaml
@@ -17,7 +17,7 @@ Metadata:
     LicenseUrl: ./LICENSE
     Name: sumologic-slack
     ReadmeUrl: ./README.md
-    SemanticVersion: 1.0.4
+    SemanticVersion: 1.0.5
     SourceCodeUrl: https://github.com/SumoLogic/sumologic-slack
     SpdxLicenseId: Apache-2.0
 Outputs:
@@ -30,10 +30,32 @@ Outputs:
 Parameters:
   BackfillDays:
     Type: String
+    Description: Enter the number of days for which logs should be collected. For eg, 2 means logs for last 2 days.
+    AllowedPattern: ".+"
   HttpLogsEndpoint:
     Type: String
-  Token:
+    Description: Paste the URL for the HTTP Logs source.
+    AllowedPattern: ".+"
+  SlackAppToken:
     Type: String
+    Description: Paste the TOKEN generated from Slack App.
+    AllowedPattern: ".+"
+  SlackEnableInfrequentChannels:
+    Type: String
+    Description: "True -> Enable dividing channels into frequent and infrequent based on the last message time.
+                  False -> Send all public channels messages."
+    AllowedValues:
+      - true
+      - false
+    Default: false
+  SlackThresholdInfrequentChannels:
+    Type: String
+    Description: Threshold in hours to make channels as infrequent based on last message time. For eg, 12 hours means if the message is not recived for 12 hours, channel will be marked as infrequent.
+    Default: 72
+  SlackFetchTimeInfrequentChannels:
+    Type: String
+    Description: Time in hours to fetch messages for InFrequent channels. For eg, 12 hours means send infrequent channels messages every 12 hours.
+    Default: 12
 Resources:
   SlackFunction:
     Properties:
@@ -49,7 +71,13 @@ Resources:
           HTTP_LOGS_ENDPOINT:
             Ref: HttpLogsEndpoint
           TOKEN:
-            Ref: Token
+            Ref: SlackAppToken
+          ENABLE_INFREQUENT_CHANNELS:
+            Ref: EnableInfrequentChannels
+          INFREQUENT_CHANNELS_THRESHOLD_IN_HOURS:
+            Ref: ThresholdInfrequentChannels
+          INFREQUENT_CHANNELS_MESSAGES_FETCH_TIME_IN_HOURS:
+            Ref: FetchTimeInfrequentChannels
       Events:
         ScheduleRule:
           Properties:
