--- a/template.yaml
+++ b/template.yaml
@@ -36,10 +36,12 @@ Parameters:
     Type: String
     Description: Paste the URL for the HTTP Logs source.
     AllowedPattern: ".+"
+    NoEcho: true
   Token:
     Type: String
     Description: Paste the TOKEN generated from Slack App.
     AllowedPattern: ".+"
+    NoEcho: true
   EnableInfrequentChannels:
     Type: String
     Description: "True -> Enable dividing channels into frequent and infrequent based on the last message time.
@@ -56,6 +58,10 @@ Parameters:
     Type: String
     Description: Time in hours to fetch messages for InFrequent channels. For eg, 12 hours means send infrequent channels messages every 12 hours.
     Default: 12
+  DatabaseName:
+    Type: String
+    Description: "DynamoDB DataBase Table Name."
+    Default: sumoslack
 Resources:
   SlackFunction:
     Properties:
@@ -78,6 +84,8 @@ Resources:
             Ref: InfrequentChannelsThresholdInHours
           INFREQUENT_CHANNELS_MESSAGES_FETCH_TIME_IN_HOURS:
             Ref: InfrequentChannelsMessagesFetchTimeInHours
+          DBNAME:
+            Ref: DatabaseName
       Events:
         ScheduleRule:
           Properties:
