Releasing new version 1.0.8 with Default DBNAME as sumoslack to keep backward compatibility with version 1.0.6 and older.

--- a/sumoslack/slackcollector.yaml
+++ b/sumoslack/slackcollector.yaml
@@ -43,7 +43,7 @@ Collection:
   MAX_PAYLOAD_BYTESIZE: 500000
   END_TIME_EPOCH_OFFSET_SECONDS: 120
   BACKFILL_DAYS: null
-  DBNAME: null
+  DBNAME: "sumoslack"
   DB_DIR: "~/sumo/"
 
 DeployMetaData:
