--- a/sumoslack/slackcollector.yaml
+++ b/sumoslack/slackcollector.yaml
@@ -21,6 +21,9 @@ Slack:
   INFREQUENT_CHANNELS_MESSAGES_FETCH_TIME_IN_HOURS: 12
   # Number of channels to send messages for during individual lambda invocation
   INFREQUENT_CHANNELS_CHUNK_SIZE: 50
+  # Increase the Page Counter value to fetch more access Logs in a Execution. Default is to fetch 2 Access Logs Page.
+  # Max Pages that can be fetched is 100.
+  ACCESS_LOGS_PAGE_COUNTER: 2
 
 Logging:
   LOG_FORMAT: "%(levelname)s | %(asctime)s | %(threadName)s | %(name)s | %(message)s"
