--- a/packaged.yaml
+++ b/packaged.yaml
@@ -13,9 +13,9 @@ Metadata:
     - sumologic
     - serverless
     - Slack
-    LicenseUrl: s3://appdevstore-test/Slack/v1.1.0/5122657d5b9a0d3713e24d3a33eae431
+    LicenseUrl: s3://appdevstore/Slack/v1.1.0/5122657d5b9a0d3713e24d3a33eae431
     Name: sumologic-slack
-    ReadmeUrl: s3://appdevstore-test/Slack/v1.1.0/ee1c18331fdb7a8c193c6fd14d1884bb
+    ReadmeUrl: s3://appdevstore/Slack/v1.1.0/ee1c18331fdb7a8c193c6fd14d1884bb
     SemanticVersion: 1.1.0
     SourceCodeUrl: https://github.com/SumoLogic/sumologic-slack
     SpdxLicenseId: Apache-2.0
@@ -116,7 +116,7 @@ Resources:
     Type: AWS::IAM::Policy
   SlackFunction:
     Properties:
-      CodeUri: s3://appdevstore-test/Slack/v1.1.0/73cfdb29a8ca07d7f73addd0aed2f372
+      CodeUri: s3://appdevstore/Slack/v1.1.0/ab746e7332ba2be68a8184fa94875d38
       Description: This function gets triggered perodically via CloudWatchEvents and
         fetches logs from Slack and ingest to SumoLogic
       Environment:
