releasing 1.1.1 version of slack collection

--- a/sumoslack/slackcollector.yaml
+++ b/sumoslack/slackcollector.yaml
@@ -48,6 +48,7 @@ Collection:
   BACKFILL_DAYS: null
   DBNAME: "sumoslack"
   DB_DIR: "~/sumo/"
+  IS_SHUFFLE_TASKS: false
 
 DeployMetaData:
   PACKAGENAME: sumologic-slack
